--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,4 +1,11 @@
 @media screen and (max-width: 640px) {
 
-    
+    .container {
+    width: 90%;
+    margin: 70px auto;
+}
+
+    #title {
+        text-align: center;
+    }
 }
