--- a/css/mobile.css
+++ b/css/mobile.css
@@ -10,4 +10,19 @@
         width: 90%;
         margin: 70px auto;
     }
+
+    /* Recipe */
+    #recipe-title {
+        font-size: 1.5rem;
+    }
+
+    .dessert-type {
+        display: none;
+    }
+
+    .details {
+        display: block;
+    }
+
+
 }
