--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,6 @@ header {
 
 .recipe-row {
     display: flex;
-    margin-bottom: 20px;
     box-shadow: 5px 5px 10px hsl(0, 0%, 82.7%);
 }
 
@@ -94,16 +93,20 @@ header {
     display: flex;
     justify-content: space-between;
     /* DEBUG */
-    background-color: lightgrey;
+    /* background-color: lightgrey; */
 }
 
 .btn {
     display: inline-block;
-    padding: 10px 20px;
-    margin: 20px 0px;
+    padding: 10px 50px;
+    margin: 30px 0px;
     border-radius: 30px;
+    font-weight: 700;
+    font-size: 0.9rem;
+    color: black;
+    box-shadow: 5px 5px 10px hsl(0, 0%, 82.7%);
     /* DEBUG */
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
 }
 
 /* Footer */
