--- a/css/mobile.css
+++ b/css/mobile.css
@@ -24,5 +24,15 @@
         display: block;
     }
 
+    /* Socials */
+    .btn {
+        padding: 10px 15px;
+        border-radius: 40%;
+        box-shadow: 0px 5px 10px hsl(0, 0%, 82.7%);
+    }
+
+    .btn span {
+        display: none;
+    }
 
 }
