--- a/css/mobile.css
+++ b/css/mobile.css
@@ -35,4 +35,12 @@
         display: none;
     }
 
+    /* Descrizione */
+    .object-img {
+        float: none;
+        display: block;
+        width: 60%;;
+        margin: 0 auto;
+        box-shadow: 5px 5px 10px hsl(0, 0%, 82.7%);
+    }
 }
