--- a/css/mobile.css
+++ b/css/mobile.css
@@ -42,5 +42,6 @@
         width: 60%;;
         margin: 0 auto;
         box-shadow: 5px 5px 10px hsl(0, 0%, 82.7%);
+        position: unset;
     }
 }
