--- a/css/mobile.css
+++ b/css/mobile.css
@@ -8,7 +8,7 @@
     /* Main */
     .container {
         width: 90%;
-        margin: 70px auto;
+        margin: 30px auto;
     }
 
     /* Recipe */
@@ -35,13 +35,31 @@
         display: none;
     }
 
+    /* ADS */
+    .banner-ads {
+        display: none;
+    }
+
     /* Descrizione */
     .object-img {
         float: none;
         position: unset;
         display: block;
-        width: 60%;;
+        width: 60%;
+        ;
         margin: 0 auto;
         box-shadow: 5px 5px 10px hsl(0, 0%, 82.7%);
     }
+
+    /* Footer */
+    .links-list {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 0.9rem;
+        margin-top: 15px;
+        flex-wrap: wrap;
+        line-height: 40px;
+    }
+}
 }
